--- a/html/doc_1.html
+++ b/html/doc_1.html
@@ -223,7 +223,8 @@
         On peut déduire que sous forme matricielle cela s’écrit : <span class="math inline">\({\left(\begin{array}{c} {296}\\{0}\\\vdots\\{0}\end{array}\right)}={\left(\begin{array}{ccccc} {1}&amp;{0}&amp;{0}&amp;\ldots&amp;{0}\\{1}&amp;-{2}&amp;{1}&amp;\ddots&amp;\vdots\\{0}&amp;\ddots&amp;\ddots&amp;\ddots&amp;\ddots\\\vdots&amp;\ddots&amp;{1}&amp;-{2}&amp;{1}\\{0}&amp;\ldots&amp;{0}&amp;{0}&amp;{1}\end{array}\right)}{\left(\begin{array}{c} {T}_{{0}}\\\vdots\\{T}_{{n}}\end{array}\right)}\)</span></p>
         <p>Il ne nous reste plus qu’à résoudre le système matriciel à l’aide de python.<br />
         On peut également simplement choisir la présision de notre résolution en choisissant la valeur de n.</p>
-        <p>On obtient finalement la courbe : <img src="Figure_1.png" /></p>
+        <p>On obtient finalement la courbe :</p>
+        <p><img src="Figure_1.png" style="width:60.0%" /></p>
         <h2 id="conditions-limites">Conditions limites :</h2>
         <p>On obtient bien <span class="math inline">\({T}_{{0}}={296.0}\)</span> (température initiale)<br />
         et <span class="math inline">\({T}_{{n}}={0}\)</span></p>
