--- a/html/doc_1.html
+++ b/html/doc_1.html
@@ -205,7 +205,7 @@
 </head>
 
 <body>
-        <h1 id="compte-rendu-calderon-déchelette">Compte rendu Calderon-Déchelette</h1>
+        <h1 id="compte-rendu-guillaume-calderon---eymeric-déchelette">Compte rendu Guillaume Calderon - Eymeric Déchelette</h1>
         <h2 id="détermination-de-la-formule">Détermination de la formule</h2>
         <p>On est parti de l’équation de la chaleur : <span class="math inline">\(\frac{{\partial\phi}}{{\partial{t}}}+\nabla\cdot{\left(\phi{V}\right)}={S}\)</span></p>
         <h3 id="méthode-analytique">Méthode analytique</h3>
