--- a/html/doc_2.html
+++ b/html/doc_2.html
@@ -205,7 +205,16 @@
 </head>
 
 <body>
-        
+        <h1 id="compte-rendu-tp2-calderon-déchelette">Compte rendu TP2 Calderon-Déchelette</h1>
+        <p>On cherche a simplifier cette équation de la conduction thermique.<br />
+        <span class="math inline">\(\frac{{\partial{T}}}{{\partial{t}}}={D}\frac{{\partial^{{2}}{T}}}{{\partial{x}^{{2}}}}\)</span></p>
+        <p>On se trouve dans un millieu a une dimension homogène et isotrope</p>
+        <h2 id="condition-initiales">Condition initiales</h2>
+        <p>Au départ, la température du centre est plus élevé que celle des bords.<br />
+        On donne T en fonction de t (en seconde) et x (en metre) et L la longueur final<br />
+        <span class="math inline">\({T}{\left({x}={0},{t}\right)}={0}\)</span><br />
+        <span class="math inline">\({T}{\left({x}={L},{t}\right)}={0}\)</span><br />
+        <span class="math inline">\({T}{\left({x},{t}={0}\right)}={4}{x}{\left({3}-{x}\right)}\)</span></p>
   </body>
 
 </html>
